--- a/main/index.html
+++ b/main/index.html
@@ -19,6 +19,8 @@
     <span><a href="apps.html">Apps</a></span>
     &lt;&gt;
     <span><a href="partnership.html">Partnership</a></span>
+    &lt;&gt;
+    <span><a href="credits">Credit</a></span>
 </div>
 </body>
 </html>
