--- a/main/index.html
+++ b/main/index.html
@@ -20,7 +20,13 @@
     &lt;&gt;
     <span><a href="partnership.html">Partnership</a></span>
     &lt;&gt;
-    <span><a href="credits">Credit</a></span>
+    <span><a href="credits.html">Credit</a></span>
+    &lt;&gt;
+    <span><a href="blogs.html">Blogs</a></span>
+    &lt;&gt;
+    <span><a href="updatelog.html">Update log</a></span>
+    &lt;&gt;
+    <span><a href="settings.html">Settings</a></span>
 </div>
 </body>
 </html>
