--- a/main/index.html
+++ b/main/index.html
@@ -28,5 +28,11 @@
     &lt;&gt;
     <span><a href="settings.html">Settings</a></span>
 </div>
+<font color="white">
+<center><h1>Infamyunblocked v3</h1></center>
+<center><h2>Welcome to the best proxy/game website ever</h2></center>
+</font>
+
+
 </body>
 </html>
